Tue Sep 23 12:43:17 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* ramap.c: Added alias `array-map!' for `array-map'.  (Probably,
	the names `serial-array-map' and `array-map' should be removed.)

Mon Sep 22 01:21:54 1997  Mikael Djurfeldt  <mdj@kenneth>

	* init.c (scm_boot_guile_1): Added scm_init_objects ().
	Added #include "objects.h"

	* eval.c (scm_makprom): Added SCM_DEFER_INTS and SCM_ALLOW_INTS.
	Add #include "feature.h".

	* Makefile.am (libguile_la_SOURCES): Added objects.c.
	(modinclude_HEADERS): Added objects.h.

	* ports.h (SCM_EOF_OBJECT_P): New macro predicate.
	This test is needed at many places in the code and should be
	abstracted.  (Motivated by the need of this test in libguiletk.)

	* ports.c (scm_eof_object_p), vports.c (sfgetc), strports.c
	(scm_eval_string), load.c (scm_primitive_load,
 	scm_read_and_eval_x), gh_eval.c (gh_eval_str):
	Use SCM_EOF_OBJECT_P.

	* eval.c (scm_init_eval): Add feature `delay'.

Tue Sep 16 02:12:02 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* scmhob.h: Removed.

Mon Sep 15 20:42:03 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* list.h (SCM_LISTn): New macros.  Make list creation in C code
 	prettier.  The idea comes from STk.

	* sequences.h, sequences.c, append.h, append.c: Removed.  These
 	files implemented non-R4RS operations which would encourage
 	non-portable programming style and less easy-to-read code.

	* Makefile.am (sequences.h, sequences.c, append.h, append.c):
 	Removed.
	
	* libguile.h, eval.c, init.c, stime.c, unif.c: Removed #include
 	sequences.h, #include append.h.

	* init.c (scm_boot_guile_1): Removed calls to scm_init_append and
	scm_init_sequences.

	* gh.h, gh_list.c: Renamed gh_list_length --> gh_length.

	* list.h, list.c: Renamed scm_list_length --> scm_length, scm

	* stime.c (bdtime2c): Changed scm_obj_length --> scm_vector_length.

Sat Sep 13 00:21:41 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* eval.c: Added #include "objects.h"
